test/compile_errors/err_issue155_called_generic_comptime_error.w
//! expect-error: issue155 called generic

fn fail[T](x: T) -> i32:
    comptime_error("issue155 called generic")

fn main:
    let x = fail(1)
    print("{x}")
